test/visibility/only/innerModuleSharesName-topLevel.good
innerModuleSharesName-topLevel.chpl:1: In module 'OuterModule':
innerModuleSharesName-topLevel.chpl:11: error: cannot find 'whatev' in module 'M'
